--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -33,8 +33,7 @@
     "classnames": "^2.3.1",
     "nanoid": "^3.1.25",
     "postcss-js": "^3.0.3",
-    "qrcode": "^1.4.4",
-    "use-breakpoint": "^2.0.2"
+    "qrcode": "^1.4.4"
   },
   "peerDependencies": {
     "aws-amplify": "3.x.x || 4.x.x",
